Responsive Case study

--- a/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
@@ -25,142 +25,142 @@
     <div class="fond fond__janus element__graphique__fond_fixe"></div>
     <div class="fond fond__janus element__graphique__fond"></div>
 
-    <header class="section section__header section__header__CS">
-        <section>
-            <div>
-              <h1 class="eight">Janus</h1>
-            </div>
-            <div>
-              <div class="prt2__header__CS">
-                  <p>Projet Rethinking UX </p>
-                </div>
-                <div class="img__header__CS">
-                    <div class="img__header__CS_p"></div>
-                    <div></div>
-                </div>
-            </div>
-        </section>
-    </header>
-
-    <main>
-      <section class="section section__miseSituation">
-        <div>
-          <h3 class="eight">Mise en situation</h3>
-        </div>
-        <div  class="txt__CS">
-          <p class="txt_big">Dans le cadre de notre projet Rethinking UX (option Design Web & Transmédia à la Haute-École Albert Jacquard), nous avons dû réfléchir, par groupe, à une manière de réaménager une salle à disposition des étudiants (A083–A084). À la base, cette pièce appartenait à l’école secondaire Henri Maus, mais elle a été laissée à l’abandon et n’était plus utilisée depuis quelques années.</p>
-
-          <p>Mme Loroy et Mr Selamet nous ont donc donné des directives pour ce projet : Découvrir la salle, récolter les attentes et besoins des étudiants, rédaction d’un Case Study et bien évidemment la présentation de notre projet au reste de la classe/aux professeurs. Suite à cela, chaque élève a dû réaliser un site internet (au design unique) afin de présenter le projet, sur base du contenu de ce Case Study.</p>
-        </div>
-      </section>
-
-      <section class="section section__priseContact">
-        <div class="title__pC">
-          <h3 class="eight">Prise de contact</h3>
-        </div>
-        <div class="txt__pC">
+    <header class="section section__header__CS">
+      <section>
           <div>
-            <p class="txt_big">Nous avons, à l'aide d'un sondage, relevé que la majorité des étudiants voulaient un endroit détente pour les heures de fourches où il est également possible de travailler dans le calme et le confort, comme ils le feraient chez eux. Malgré que la majorité des outils disponibles dans l’école soient numériques, les élèves soulignent un grand manque de prises accessibles pour brancher/recharger leurs appareils. </p>
-
-            <p>Enfin, la plupart des ordinateurs ou autres appareils à disposition se trouvent dans les classes où les professeurs donnent cours, ce qui rend impossible l’accès libre au matériel pendant les heures creuses.</p>
+            <h1 class="eight">Feldup</h1>
           </div>
-
-          <div class="img__pC"></div>
-        </div>
-        <div class="petit_img__pC">
-          <div class="img__pC"></div>
-          <div class="img__pC"></div>
-          <div class="img__pC"></div>
-        </div>
-      </section>
-
-      <section class="section section__problèmeMajeurs">
-        <div><h3 class="eight">Problèmes majeurs</h3></div>
-
-        <div><p>Tout d’abord, le A084 sert actuellement au Conseil Étudiants pour la livraison des Guido. Nous allons devoir négocier avec eux pour leur trouver un autre local pour pouvoir faire leur activité. </p></div>
-
-        <div>
-          <div>
-            <p>Lors d’une visite du A083, nous avons constaté un manque de prises, rendant l’installation d’ordinateurs impossible sans refaire l’installation électrique du local. </p>
-            <p>Nous avons également remarqué que la pièce résonne. Pour y remédier, nous avons pensé à mettre des mousses acoustiques sur les murs, afin d’insonoriser correctement le local. </p>
+          <div class="prt2__header__CS">
+            <div class="txt">
+                <p>Projet Janus</p>
+              </div>
+              <div class="img__header__CS">
+                  <div class="img__header__CS_p"></div>
+                  <div></div>
+              </div>
           </div>
-          <div>
-            <p>La pièce est séparée par deux portes actuellement condamnées. Pour faciliter l’accès aux deux salles, il pourrait être intéressant de rétablir l’ouverture de ces portes, afin d’éviter aux étudiants de devoir sortir de la pièce pour changer de zone.</p>
-            <p>Un autre problème non négligeable : Toute idée doit être validée par la direction, notamment pour prévoir un budget et en vérifier la faisabilité.</p>
-          </div>
-        </div>
       </section>
+  </header>
 
-      <section class="section section__premiersIdee">
-        <div><h3 class="eight">Premières idées</h3></div>
-
-        <div></div>
-
-        <div>
-          <p>Après avoir analysé la salle et ce qui se trouvait à notre disposition, nous avons réfléchi à ce que nous pourrions apporter de neuf à cette salle en fonction des demandes des étudiants. </p>
-
-          <p>Plusieurs points revenaient de manière récurrente : le manque de décoration et de confort au sein de l’école. D’après les réponses obtenues suite à notre formulaire, il n’y a en effet, en dehors de la cafétéria (qui n’est pas vraiment un endroit “calme”), pratiquement pas de salle aménagée pour être au calme, loin du bruit extérieur. Que ce soit pour se détendre, ou pour travailler, cette salle était donc parfaite pour cela, car elle se situe dans une annexe du bâtiment principal.</p>
-
-          <p>Deux points ont alors retenu notre attention. Premièrement, la décoration des murs. En effet, les murs de la salle étant simplement peints en blanc, cela donne une impression de vide, qui ne donne pas envie d’y rester. Notre idée principale est de décorer la pièce avec des affiches/travaux d’étudiants qu’ils pourraient accrocher aux murs.</p>
-
-          <p>Deuxièmement, l’idée d’aménager un coin tables/fauteuils en spirale pour qu’il se différencie des tables d’école plus classiques. Cet étalage serait collé contre l’un des murs de la salle, prenant toute sa largeur. Cependant, étant donné le budget limité, c’est trop compliqué à réaliser.</p>
-
-          <p>Nous avons donc retenu l’idée principale des affiches sur le mur, bien plus abordable que les fauteuils, en gardant quand même l’idée en tête au cas où une solution serait trouvée.</p>
-        </div>
-      </section>
-
-      <section class="section section__miseCommun">
-        <div>
-          <h3 class="eight">Mise en Commun</h3>
-        </div>
-
-        <div>
-          <div>
-            <p>Une fois que chaque groupe a fini ses recherches de problématiques et d’idées en découlant, nous avons ensuite mis en commun toutes nos idées afin de se répartir les tâches et assurer la cohérence du projet global. Chaque groupe a donc une tâche précise à réaliser : nous nous occuperons de la décoration murale, certains de la porte, d’autres de l’agencement des meubles, etc.</p>
-          </div>
-          <div></div>
-        </div>
-      </section>
-
-      <section class="section section__approfondissement">
-        <div>
-          <h4 class="eight">Approfondissement du projet</h4>
-        </div>
-
-        <div>
-          <p>Suite à cette mise en commun, nous nous sommes penché sur notre idée d’affiches. Nous avons décidé de partir sur une bâche à accrocher sur l’un des murs de la pièce grâce à des ficelles et des anneaux ancrés dans le mur. En premier lieu, nous voulions y insérer des travaux d’étudiants d’options différentes, un peu dans le même style que les posters/affiches/bâches des journées portes ouvertes de l’école. Le problème est qu’il faudrait l’autorisation de chaque étudiant pour pouvoir utiliser leurs travaux, ou bien demander directement aux professeurs de faire une sélection.</p>
-
-          <p>Une autre solution, serait de remplacer la bâche par des néons, des leds, des plantes aux murs ou d’autres éléments moins présents dans les différents bâtiments de l’école afin de combler un peu cette impression de blanc/de vide/de connu. On utiliserait cette option si le timing devenait trop juste pour obtenir les travaux des élèves.</p>
-
-          <p>Dans ce but, pour ajouter un peu de variation et s’éloigner du fait d’avoir des bâches partout dans l’école, nous avons eu pour idée de mettre des mousses acoustiques sur certains murs de la salle. En effet, la hauteur sous plafond étant très grande, la pièce résonne beaucoup. L’installation de ces mousses permettrait de réduire considérablement les échos de la salle tout en contribuant à sa décoration.</p>
-        </div>
-      </section>
-
-    </main>
-
-    <footer class="section section__footer">
-      <div class="logo_secondaire"></div>
-      <div class="sous__nav">
-        <ul>
-          <a href="">
-            <li>
-              <p>à propos</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>Projets</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>Crédits</p>
-            </li>
-          </a>
-        </ul>
+  <main>
+    <section class="section section__miseSituation">
+      <div>
+        <h3 class="eight">Mise en situation</h3>
       </div>
-      <div class="copyright"></div>
-    </footer>
+      <div  class="txt__CS">
+        <p class="txt_big">Dans le cadre de notre projet Rethinking UX (option Design Web & Transmédia à la Haute-École Albert Jacquard), nous avons dû réfléchir, par groupe, à une manière de réaménager une salle à disposition des étudiants (A083–A084). À la base, cette pièce appartenait à l’école secondaire Henri Maus, mais elle a été laissée à l’abandon et n’était plus utilisée depuis quelques années.</p>
+
+        <p>Mme Loroy et Mr Selamet nous ont donc donné des directives pour ce projet : Découvrir la salle, récolter les attentes et besoins des étudiants, rédaction d’un Case Study et bien évidemment la présentation de notre projet au reste de la classe/aux professeurs. Suite à cela, chaque élève a dû réaliser un site internet (au design unique) afin de présenter le projet, sur base du contenu de ce Case Study.</p>
+      </div>
+    </section>
+
+    <section class="section section__priseContact">
+      <div class="title__pC">
+        <h3 class="eight">Prise de contact</h3>
+      </div>
+      <div class="txt__pC">
+        <div class="conteneur_p">
+          <p>Nous avons, à l'aide d'un sondage, relevé que la majorité des étudiants voulaient un endroit détente pour les heures de fourches où il est également possible de travailler dans le calme et le confort, comme ils le feraient chez eux. Malgré que la majorité des outils disponibles dans l’école soient numériques, les élèves soulignent un grand manque de prises accessibles pour brancher/recharger leurs appareils. </p>
+
+          <p class="txt_big">Enfin, la plupart des ordinateurs ou autres appareils à disposition se trouvent dans les classes où les professeurs donnent cours, ce qui rend impossible l’accès libre au matériel pendant les heures creuses.</p>
+        </div>
+
+        <div class="img__pC"></div>
+      </div>
+      <div class="petit_img__pC">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
+
+    <section class="section section__problèmeMajeurs">
+      <div><h3 class="eight">Problèmes majeurs</h3></div>
+
+      <div class="txt_big"><p>Tout d’abord, le A084 sert actuellement au Conseil Étudiants pour la livraison des Guido. Nous allons devoir négocier avec eux pour leur trouver un autre local pour pouvoir faire leur activité. </p></div>
+
+      <div class="txt">
+        <div>
+          <p>Lors d’une visite du A083, nous avons constaté un manque de prises, rendant l’installation d’ordinateurs impossible sans refaire l’installation électrique du local. </p>
+          <p>Nous avons également remarqué que la pièce résonne. Pour y remédier, nous avons pensé à mettre des mousses acoustiques sur les murs, afin d’insonoriser correctement le local. </p>
+        </div>
+        <div>
+          <p>La pièce est séparée par deux portes actuellement condamnées. Pour faciliter l’accès aux deux salles, il pourrait être intéressant de rétablir l’ouverture de ces portes, afin d’éviter aux étudiants de devoir sortir de la pièce pour changer de zone.</p>
+          <p>Un autre problème non négligeable : Toute idée doit être validée par la direction, notamment pour prévoir un budget et en vérifier la faisabilité.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section__premieresIdees">
+      <div><h3 class="eight">Premières idées</h3></div>
+
+      <div class="img__premieresIdees"><img src="" alt=""></div>
+
+      <div class="txt">
+        <p class="txt_g">Après avoir analysé la salle et ce qui se trouvait à notre disposition, nous avons réfléchi à ce que nous pourrions apporter de neuf à cette salle en fonction des demandes des étudiants. </p>
+
+        <p>Plusieurs points revenaient de manière récurrente : le manque de décoration et de confort au sein de l’école. D’après les réponses obtenues suite à notre formulaire, il n’y a en effet, en dehors de la cafétéria (qui n’est pas vraiment un endroit “calme”), pratiquement pas de salle aménagée pour être au calme, loin du bruit extérieur. Que ce soit pour se détendre, ou pour travailler, cette salle était donc parfaite pour cela, car elle se situe dans une annexe du bâtiment principal.</p>
+
+        <p>Deux points ont alors retenu notre attention. Premièrement, la décoration des murs. En effet, les murs de la salle étant simplement peints en blanc, cela donne une impression de vide, qui ne donne pas envie d’y rester. Notre idée principale est de décorer la pièce avec des affiches/travaux d’étudiants qu’ils pourraient accrocher aux murs.</p>
+
+        <p>Deuxièmement, l’idée d’aménager un coin tables/fauteuils en spirale pour qu’il se différencie des tables d’école plus classiques. Cet étalage serait collé contre l’un des murs de la salle, prenant toute sa largeur. Cependant, étant donné le budget limité, c’est trop compliqué à réaliser.</p>
+
+        <p>Nous avons donc retenu l’idée principale des affiches sur le mur, bien plus abordable que les fauteuils, en gardant quand même l’idée en tête au cas où une solution serait trouvée.</p>
+      </div>
+    </section>
+
+    <section class="section section__miseCommun">
+      <div>
+        <h3 class="eight">Mise en Commun</h3>
+      </div>
+
+      <div class="bloc__txt">
+        <div class="txt">
+          <p>Une fois que chaque groupe a fini ses recherches de problématiques et d’idées en découlant, nous avons ensuite mis en commun toutes nos idées afin de se répartir les tâches et assurer la cohérence du projet global. Chaque groupe a donc une tâche précise à réaliser : nous nous occuperons de la décoration murale, certains de la porte, d’autres de l’agencement des meubles, etc.</p>
+        </div>
+        <div class="img__miseCommun"></div>
+      </div>
+    </section>
+
+    <section class="section section__approfondissement">
+      <div>
+        <h4 class="eight">Approfondissement du projet</h4>
+      </div>
+
+      <div class="txt">
+        <p>Suite à cette mise en commun, nous nous sommes penché sur notre idée d’affiches. Nous avons décidé de partir sur une bâche à accrocher sur l’un des murs de la pièce grâce à des ficelles et des anneaux ancrés dans le mur. En premier lieu, nous voulions y insérer des travaux d’étudiants d’options différentes, un peu dans le même style que les posters/affiches/bâches des journées portes ouvertes de l’école. Le problème est qu’il faudrait l’autorisation de chaque étudiant pour pouvoir utiliser leurs travaux, ou bien demander directement aux professeurs de faire une sélection.</p>
+
+        <p>Une autre solution, serait de remplacer la bâche par des néons, des leds, des plantes aux murs ou d’autres éléments moins présents dans les différents bâtiments de l’école afin de combler un peu cette impression de blanc/de vide/de connu. On utiliserait cette option si le timing devenait trop juste pour obtenir les travaux des élèves.</p>
+
+        <p>Dans ce but, pour ajouter un peu de variation et s’éloigner du fait d’avoir des bâches partout dans l’école, nous avons eu pour idée de mettre des mousses acoustiques sur certains murs de la salle. En effet, la hauteur sous plafond étant très grande, la pièce résonne beaucoup. L’installation de ces mousses permettrait de réduire considérablement les échos de la salle tout en contribuant à sa décoration.</p>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="section section__footer">
+    <div class="logo_secondaire"></div>
+    <div class="sous__nav">
+      <ul>
+        <a href="">
+          <li>
+            <p>à propos</p>
+          </li>
+        </a>
+        <a href="">
+          <li>
+            <p>Projets</p>
+          </li>
+        </a>
+        <a href="">
+          <li>
+            <p>Crédits</p>
+          </li>
+        </a>
+      </ul>
+    </div>
+    <div class="copyright"></div>
+  </footer>
 
   </body>
 </html>
