--- a/workflow-laravel-mix-6-2/src/caseStudy__prux.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__prux.html
@@ -25,13 +25,13 @@
     <div class="fond fond__prux element__graphique__fond_fixe"></div>
     <div class="fond fond__prux element__graphique__fond"></div>
 
-    <header class="section section__header section__header__CS">
+    <header class="section section__header__CS">
         <section>
             <div>
               <h1 class="eight">PRUX —25</h1>
             </div>
-            <div>
-              <div class="prt2__header__CS">
+            <div class="prt2__header__CS">
+              <div class="txt">
                   <p>Projet Rethinking UX </p>
                 </div>
                 <div class="img__header__CS">
