--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -20,6 +20,7 @@
     <script src="scripts/app.js" defer></script>
   </head>
   <body>
+    <div class="transition-overlay"></div>
 
     <!-- Bruit-->
     <canvas id="noiseCanvas"></canvas>
@@ -57,14 +58,14 @@
           <h2 class="eight">Halbart</h2>
         </div>
         <div class="section__header_p">
-          <p>designer passionné <span class="eight">par</span> la création d'expériences <span class="eight">visuelles.</span></p>
+          <p>designer passionné par la création d'expériences <span class="eight">visuelles.</span></p>
         </div>
         <div class="element__graph"></div>
       </div>
 
       <div class="section__header_prt2">
         <div class="div__h3">
-          <h3>Web Desi<span class="eight">g</span>ner</h3>
+          <h3>Web Designer</h3>
         </div>
         <div class="div__p">
           <p>Frontend —Backend</p>
@@ -75,7 +76,12 @@
     <main>
       <section id="presentation" class="section section__presentation">
         <div><img class="img__presentation" src="assets/images/img_header_portfolio 1.webp" alt=""></div>
-        <div class="presentation__text"></div>
+        <div class="presentation__text">
+          
+          <p>Je suis un étudiant de 20 ans et je suis étudiant en Web Design à la <a target="_blank" href="https://www.heaj.be/fr/">Haute École Albert Jacquard.</a></p>
+          <p>J’ai commencé mon parcours en infographie à <a target="_blank" href="https://www.inraci.be/">l’INRACI</a>, en option artistique, où j’ai commencé à développer un œil créatif. Aujourd’hui, je continu cette voie dans le design web, en explorant des univers visuels variés et en m’adaptant à chaque projet.</p>
+          
+        </div>
       </section>
 
       <section id="projets" class="section section__projets">
@@ -87,29 +93,20 @@
           <div class="txt__gras"><p>Janus</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
-            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-              </svg>
           </div>
         </a>
 
         <a href="caseStudy__prux.html" class="button2">
           <div class="txt__gras"><p>PRUX —25</p></div>
           <div class="section__projets__role">
-            <p>Rôle : UX/UI/Dev</p>
-            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-              </svg>
+            <p>Rôle : UX/UI</p>
           </div>
         </a>
 
         <a href="caseStudy__DataPlay.html" class="button3">
           <div class="txt__gras"><p>Data-Play</p></div>
           <div class="section__projets__role">
-            <p>Rôle : UX/UI/Dev</p>
-            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-              </svg>
+            <p>Rôle : UX/UI</p>
           </div>
         </a>
 
@@ -117,9 +114,6 @@
           <div class="txt__gras"><p>Design Fiction</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
-            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-              </svg>
           </div>
         </a>
       </section>
