--- a/workflow-laravel-mix-6-2/src/caseStudy__DataPlay.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__DataPlay.html
@@ -20,6 +20,7 @@
     <script src="scripts/app.js" defer></script>
   </head>
   <body>
+    <div class="transition-overlay"></div>
     <canvas id="noiseCanvas"></canvas>
 
     <div class="fond fond__dataplay element__graphique__fond_fixe"></div>
@@ -65,7 +66,7 @@
   <main>
     <section class="section section__miseSituation">
       <div>
-        <h3 class="eight">Mise en situation</h3>
+        <h2 class="eight">Mise en situation</h2>
       </div>
       <div  class="txt__CS">
         <p class="txt_big">Dans le cadre de notre projet Rethinking UX (option Design Web & Transmédia à la Haute-École Albert Jacquard), nous avons dû réfléchir, par groupe, à une manière de réaménager une salle à disposition des étudiants (A083–A084). À la base, cette pièce appartenait à l’école secondaire Henri Maus, mais elle a été laissée à l’abandon et n’était plus utilisée depuis quelques années.</p>
