--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -28,6 +28,8 @@
     <div class="fond element__graphique__fond_fixe"></div>
     <div class="fond element__graphique__fond"></div>
     <!-- Nav -->
+
+
     <nav class=" section__nav">
       <div>
         <div class="logo">
@@ -37,37 +39,38 @@
             </svg>
         </div>
         <div class="button_nav">
-          <a href="index.html">
-            <p>Acceuil</p>
-          </a><a href="index.html#presentation">
-            <p>à propos</p>
-          </a><a href="index.html#projets">
-            <p>Les projets</p>
-          </a>
+          <div class="menu">
+            <a href="index.html">
+              <p>Acceuil</p>
+            </a><a href="index.html#presentation">
+              <p>à propos</p>
+            </a><a href="index.html#projets">
+              <p>Les projets</p>
+            </a>
+          </div>
         </div>
       </div>
     </nav>
-
     <!-- Header -->
     <header class="section section__header">
       <div class="section__header_prt1">
         <div>
-          <h1 class="eight">Arthur</h1>
+          <h1 class="eight reveal">Arthur</h1>
         </div>
         <div>
-          <h2 class="eight">Halbart</h2>
+          <h2 class="eight reveal">Halbart</h2>
         </div>
         <div class="section__header_p">
-          <p>designer passionné par la création d'expériences <span class="eight">visuelles.</span></p>
+          <p class="reveal">designer passionné par la création d'expériences <span class="eight">visuelles.</span></p>
         </div>
         <div class="element__graph"></div>
       </div>
 
       <div class="section__header_prt2">
-        <div class="div__h3">
+        <div class="div__h3 reveal">
           <h3>Web Designer</h3>
         </div>
-        <div class="div__p">
+        <div class="div__p reveal">
           <p>Frontend —Backend</p>
         </div>
       </div>
@@ -78,15 +81,15 @@
         <div><img class="img__presentation" src="assets/images/img_header_portfolio 1.webp" alt=""></div>
         <div class="presentation__text">
           
-          <p>Je suis un étudiant de 20 ans et je suis étudiant en Web Design à la <a target="_blank" href="https://www.heaj.be/fr/">Haute École Albert Jacquard.</a></p>
-          <p>J’ai commencé mon parcours en infographie à <a target="_blank" href="https://www.inraci.be/">l’INRACI</a>, en option artistique, où j’ai commencé à développer un œil créatif. Aujourd’hui, je continu cette voie dans le design web, en explorant des univers visuels variés et en m’adaptant à chaque projet.</p>
+          <p class="reveal">Je suis un étudiant de 20 ans et je suis étudiant en Web Design à la <a target="_blank" href="https://www.heaj.be/fr/">Haute École Albert Jacquard.</a></p>
+          <p class="reveal">J’ai commencé mon parcours en infographie à <a target="_blank" href="https://www.inraci.be/">l’INRACI</a>, en option artistique, où j’ai commencé à développer un œil créatif. Aujourd’hui, je continu cette voie dans le design web, en explorant des univers visuels variés et en m’adaptant à chaque projet.</p>
           
         </div>
       </section>
 
       <section id="projets" class="section section__projets">
         <div>
-          <h3 class="eight">Les projets</h3>
+          <h3 class="eight reveal">Les projets</h3>
         </div>
 
         <a href="caseStudy__Janus.html" class="button">
@@ -118,7 +121,7 @@
         </a>
       </section>
 
-      <section class="section section__contact">
+      <section class="section section__contact reveal">
         <h3 class="eight">Conctacts</h3>
         <div>
           <p class="txt__gras">Email</p>
