--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -39,9 +39,9 @@
             </svg>
         </div>
         <div class="button_nav">
-          <div class="menu">
+          <div>
             <a href="index.html">
-              <p>Acceuil</p>
+              <p>Accueil</p>
             </a><a href="index.html#presentation">
               <p>à propos</p>
             </a><a href="index.html#projets">
@@ -50,7 +50,22 @@
           </div>
         </div>
       </div>
+
+      <div class="menu-wrapper">
+        <div class="menu">
+          <a href="index.html">
+            <p>Accueil</p>
+          </a><a href="index.html#presentation">
+            <p>à propos</p>
+          </a><a href="index.html#projets">
+            <p>Les projets</p>
+          </a>
+        </div>
+      </div>
     </nav>
+    <div class="block__btn">
+      <button class="menu-btn"><i></i><i></i><i></i>menu</button>
+    </div>
     <!-- Header -->
     <header class="section section__header">
       <div class="section__header_prt1">
@@ -92,28 +107,28 @@
           <h3 class="eight reveal">Les projets</h3>
         </div>
 
-        <a href="caseStudy__Janus.html" class="button">
+        <a href="caseStudy__Janus.html" class="BTN button">
           <div class="txt__gras"><p>Janus</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
           </div>
         </a>
 
-        <a href="caseStudy__prux.html" class="button2">
+        <a href="caseStudy__prux.html" class="BTN button2">
           <div class="txt__gras"><p>PRUX —25</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI</p>
           </div>
         </a>
 
-        <a href="caseStudy__DataPlay.html" class="button3">
+        <a href="caseStudy__DataPlay.html" class="BTN button3">
           <div class="txt__gras"><p>Data-Play</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI</p>
           </div>
         </a>
 
-        <a href="caseStudy__DesignFiction.html" class="button4">
+        <a href="caseStudy__DesignFiction.html" class="BTN button4">
           <div class="txt__gras"><p>Design Fiction</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
@@ -138,6 +153,11 @@
       <div class="logo_secondaire"></div>
       <div class="sous__nav">
         <ul>
+          <a href="">
+            <li>
+              <p>Accueil</p>
+            </li>
+          </a>
           <a href="">
             <li>
               <p>à propos</p>
