--- a/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
@@ -36,7 +36,7 @@
         </div>
         <div class="button_nav">
           <a href="index.html">
-            <p>Acceuil</p>
+            <p>Accueil</p>
           </a><a href="index.html#presentation">
             <p>à propos</p>
           </a><a href="index.html#projets">
