Case Study Janus

--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -28,8 +28,6 @@
     <div class="fond element__graphique__fond_fixe"></div>
     <div class="fond element__graphique__fond"></div>
     <!-- Nav -->
-
-
     <nav class=" section__nav">
       <div>
         <div class="logo">
@@ -121,14 +119,7 @@
           </div>
         </a>
 
-        <a href="caseStudy__DataPlay.html" class="BTN button3">
-          <div class="txt__gras"><p>Data-Play</p></div>
-          <div class="section__projets__role">
-            <p>Rôle : UX/UI</p>
-          </div>
-        </a>
-
-        <a href="caseStudy__DesignFiction.html" class="BTN button4">
+        <a href="caseStudy__DesignFiction.html" class="BTN button3">
           <div class="txt__gras"><p>Design Fiction</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
@@ -153,17 +144,17 @@
       <div class="logo_secondaire"></div>
       <div class="sous__nav">
         <ul>
-          <a href="">
+          <a href="index.html">
             <li>
               <p>Accueil</p>
             </li>
           </a>
-          <a href="">
+          <a href="index.html#presentation">
             <li>
               <p>à propos</p>
             </li>
           </a>
-          <a href="">
+          <a href="index.html#projets">
             <li>
               <p>Projets</p>
             </li>
