--- a/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
@@ -26,7 +26,7 @@
     <div class="fond fond__janus element__graphique__fond_fixe"></div>
     <div class="fond fond__janus element__graphique__fond"></div>
 
-    <nav class="section__nav">
+    <nav class=" section__nav">
       <div>
         <div class="logo">
           <svg width="58" height="28" viewBox="0 0 58 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -35,6 +35,20 @@
             </svg>
         </div>
         <div class="button_nav">
+          <div>
+            <a href="index.html">
+              <p>Accueil</p>
+            </a><a href="index.html#presentation">
+              <p>à propos</p>
+            </a><a href="index.html#projets">
+              <p>Les projets</p>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="menu-wrapper">
+        <div class="menu">
           <a href="index.html">
             <p>Accueil</p>
           </a><a href="index.html#presentation">
@@ -45,19 +59,23 @@
         </div>
       </div>
     </nav>
+    <div class="block__btn">
+      <button class="menu-btn"><i></i><i></i><i></i>menu</button>
+    </div>
 
     <header class="section section__header__CS">
       <section>
           <div>
-            <h1 class="eight">Feldup</h1>
+            <h1 class="eight reveal">Feldup</h1>
           </div>
           <div class="prt2__header__CS">
             <div class="txt">
-                <p>Projet Janus</p>
+                <p class="reveal">Projet Janus</p>
               </div>
               <div class="img__header__CS">
-                  <div class="img__header__CS_p"></div>
-                  <div></div>
+                <div class="img__header__CS">
+                  <img src="assets/images/CaseStudy_Prux/img_janus_header.webp" alt="">
+                </div>
               </div>
           </div>
       </section>
@@ -66,97 +84,81 @@
   <main>
     <section class="section section__miseSituation">
       <div>
-        <h2 class="eight">Mise en situation</h2>
+        <h2 class="eight reveal">Mise en situation</h2>
       </div>
       <div  class="txt__CS">
-        <p class="txt_big">Dans le cadre de notre projet Rethinking UX (option Design Web & Transmédia à la Haute-École Albert Jacquard), nous avons dû réfléchir, par groupe, à une manière de réaménager une salle à disposition des étudiants (A083–A084). À la base, cette pièce appartenait à l’école secondaire Henri Maus, mais elle a été laissée à l’abandon et n’était plus utilisée depuis quelques années.</p>
-
-        <p>Mme Loroy et Mr Selamet nous ont donc donné des directives pour ce projet : Découvrir la salle, récolter les attentes et besoins des étudiants, rédaction d’un Case Study et bien évidemment la présentation de notre projet au reste de la classe/aux professeurs. Suite à cela, chaque élève a dû réaliser un site internet (au design unique) afin de présenter le projet, sur base du contenu de ce Case Study.</p>
-      </div>
+        <p class="txt_big reveal">Pour notre premier projet de l’année, nous devions créer un site internet sur un influenceur. Le but de l’exercice était de créer un site internet promotionnel, critique ainsi que factuel pour l’influenceur. On devait créer deux directions artistiques complètement différentes entre la page promotionnelle et la page critique.
+        Pour ma part, j’ai choisi l’artiste/Youtubeur Feldup<p>
     </section>
 
-    <section class="section section__priseContact">
+    <section class="section section__priseContact section__debut">
       <div class="title__pC">
-        <h3 class="eight">Prise de contact</h3>
+        <h3 class="eight reveal">Début du projet</h3>
       </div>
       <div class="txt__pC">
-        <div class="conteneur_p">
-          <p>Nous avons, à l'aide d'un sondage, relevé que la majorité des étudiants voulaient un endroit détente pour les heures de fourches où il est également possible de travailler dans le calme et le confort, comme ils le feraient chez eux. Malgré que la majorité des outils disponibles dans l’école soient numériques, les élèves soulignent un grand manque de prises accessibles pour brancher/recharger leurs appareils. </p>
-
-          <p class="txt_big">Enfin, la plupart des ordinateurs ou autres appareils à disposition se trouvent dans les classes où les professeurs donnent cours, ce qui rend impossible l’accès libre au matériel pendant les heures creuses.</p>
+        <div class="conteneur_p reveal">
+          <p>Pour commencer le projet, j’ai dû d’abord analyser la charte graphique de l’influenceur, s’il en avait une, dans le but que les pages promotionnelle et factuelle correspondent à l’identité de l’artiste.
+            Quand j’ai fait mes recherches, je suis tout d’abord allé voir sa chaîne YouTube, où j’ai trouvé beaucoup de miniatures dans un style horrifique.
+            Donc, pour commencer, je partais dans un style horrifique, mais avec plus de recherches, j’ai appris que c’était aussi un chanteur avec une direction artistique plus sobre.
+            Après réflexion, je suis parti sur la direction artistique la plus sobre pour parler au plus de personnes.</p>
         </div>
 
-        <div class="img__pC"></div>
-      </div>
-      <div class="petit_img__pC">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+        <div class="img__pC">
+          <img src="assets/images/CaseStudy_Prux/moodboard.webp" alt="">
+        </div>
     </section>
 
     <section class="section section__problèmeMajeurs">
-      <div><h3 class="eight">Problèmes majeurs</h3></div>
+      <div><h3 class="eight reveal">Choix des Typographies</h3></div>
 
-      <div class="txt_big"><p>Tout d’abord, le A084 sert actuellement au Conseil Étudiants pour la livraison des Guido. Nous allons devoir négocier avec eux pour leur trouver un autre local pour pouvoir faire leur activité. </p></div>
+      <div class="txt_big reveal"><p>Pour le bien du projet, j’ai dû choisir des typographies qui contrastaient suffisamment pour que les deux directions artistiques soient complètement différenciées.</p></div>
 
-      <div class="txt">
+      <div class="txt reveal">
         <div>
-          <p>Lors d’une visite du A083, nous avons constaté un manque de prises, rendant l’installation d’ordinateurs impossible sans refaire l’installation électrique du local. </p>
-          <p>Nous avons également remarqué que la pièce résonne. Pour y remédier, nous avons pensé à mettre des mousses acoustiques sur les murs, afin d’insonoriser correctement le local. </p>
+          <p>Pour les choix de typographie, j’ai choisi la typographie Roboto pour ma page promotionnelle ainsi que pour la page factuelle. J’ai pris cette typo car elle a un style proche de celui d’une machine à écrire, ce qui correspondait parfaitement au thème. En plus, c’est une police monospace, ce qui rend la lecture des textes plus lisible. </p>
         </div>
         <div>
-          <p>La pièce est séparée par deux portes actuellement condamnées. Pour faciliter l’accès aux deux salles, il pourrait être intéressant de rétablir l’ouverture de ces portes, afin d’éviter aux étudiants de devoir sortir de la pièce pour changer de zone.</p>
-          <p>Un autre problème non négligeable : Toute idée doit être validée par la direction, notamment pour prévoir un budget et en vérifier la faisabilité.</p>
+          <p>Pour ma page critique, j’ai choisi la typographie Mason Serif OT, puisqu’il fallait deux directions artistiques complètement différentes. Elle a un style gothique, ce qui contraste complètement avec la typographie Roboto.
+          Pour le texte, j’ai choisi la typographie Neue Kabel. C’est une police sans serif, ce qui permet une meilleure lisibilité.</p>
         </div>
-      </div>
-    </section>
-
-    <section class="section section__premieresIdees">
-      <div><h3 class="eight">Premières idées</h3></div>
-
-      <div class="img__premieresIdees"><img src="" alt=""></div>
-
-      <div class="txt">
-        <p class="txt_g">Après avoir analysé la salle et ce qui se trouvait à notre disposition, nous avons réfléchi à ce que nous pourrions apporter de neuf à cette salle en fonction des demandes des étudiants. </p>
-
-        <p>Plusieurs points revenaient de manière récurrente : le manque de décoration et de confort au sein de l’école. D’après les réponses obtenues suite à notre formulaire, il n’y a en effet, en dehors de la cafétéria (qui n’est pas vraiment un endroit “calme”), pratiquement pas de salle aménagée pour être au calme, loin du bruit extérieur. Que ce soit pour se détendre, ou pour travailler, cette salle était donc parfaite pour cela, car elle se situe dans une annexe du bâtiment principal.</p>
-
-        <p>Deux points ont alors retenu notre attention. Premièrement, la décoration des murs. En effet, les murs de la salle étant simplement peints en blanc, cela donne une impression de vide, qui ne donne pas envie d’y rester. Notre idée principale est de décorer la pièce avec des affiches/travaux d’étudiants qu’ils pourraient accrocher aux murs.</p>
-
-        <p>Deuxièmement, l’idée d’aménager un coin tables/fauteuils en spirale pour qu’il se différencie des tables d’école plus classiques. Cet étalage serait collé contre l’un des murs de la salle, prenant toute sa largeur. Cependant, étant donné le budget limité, c’est trop compliqué à réaliser.</p>
-
-        <p>Nous avons donc retenu l’idée principale des affiches sur le mur, bien plus abordable que les fauteuils, en gardant quand même l’idée en tête au cas où une solution serait trouvée.</p>
-      </div>
-    </section>
-
-    <section class="section section__miseCommun">
-      <div>
-        <h3 class="eight">Mise en Commun</h3>
-      </div>
-
-      <div class="bloc__txt">
-        <div class="txt">
-          <p>Une fois que chaque groupe a fini ses recherches de problématiques et d’idées en découlant, nous avons ensuite mis en commun toutes nos idées afin de se répartir les tâches et assurer la cohérence du projet global. Chaque groupe a donc une tâche précise à réaliser : nous nous occuperons de la décoration murale, certains de la porte, d’autres de l’agencement des meubles, etc.</p>
-        </div>
-        <div class="img__miseCommun"></div>
       </div>
     </section>
 
     <section class="section section__approfondissement">
       <div>
-        <h4 class="eight">Approfondissement du projet</h4>
+        <h4 class="eight reveal reveal">Choix graphiques</h4>
       </div>
 
       <div class="txt">
-        <p>Suite à cette mise en commun, nous nous sommes penché sur notre idée d’affiches. Nous avons décidé de partir sur une bâche à accrocher sur l’un des murs de la pièce grâce à des ficelles et des anneaux ancrés dans le mur. En premier lieu, nous voulions y insérer des travaux d’étudiants d’options différentes, un peu dans le même style que les posters/affiches/bâches des journées portes ouvertes de l’école. Le problème est qu’il faudrait l’autorisation de chaque étudiant pour pouvoir utiliser leurs travaux, ou bien demander directement aux professeurs de faire une sélection.</p>
+        <p class="reveal reveal">Pour ma page promotionnelle ainsi que ma page factuelle, j’ai décidé de partir sur un style minimaliste, qui correspond à la direction artistique qu’il utilise pour ses affiches de concert ou sa promotion.</p>
 
-        <p>Une autre solution, serait de remplacer la bâche par des néons, des leds, des plantes aux murs ou d’autres éléments moins présents dans les différents bâtiments de l’école afin de combler un peu cette impression de blanc/de vide/de connu. On utiliserait cette option si le timing devenait trop juste pour obtenir les travaux des élèves.</p>
+        <p class="reveal">Pour la mise en page des textes, je les ai présentés sous forme de dossier, car lorsqu’il réalise une vidéo, il effectue à chaque fois des recherches poussées et structure son contenu en chapitres.
+        Pour les couleurs, j’ai utilisé un fond blanc cassé et du gris pour le texte, dans le but d’obtenir un rendu minimaliste.</p>
 
-        <p>Dans ce but, pour ajouter un peu de variation et s’éloigner du fait d’avoir des bâches partout dans l’école, nous avons eu pour idée de mettre des mousses acoustiques sur certains murs de la salle. En effet, la hauteur sous plafond étant très grande, la pièce résonne beaucoup. L’installation de ces mousses permettrait de réduire considérablement les échos de la salle tout en contribuant à sa décoration.</p>
+        <p class="reveal">Pour ma page critique, afin d’obtenir un résultat à l’opposé des deux autres pages, je suis parti sur une direction artistique brutaliste, avec une mise en page moins structurée, composée de grands titres et de textes plus petits.
+        Pour les couleurs, j’ai utilisé un fond sombre, des typographies gris clair, ainsi qu’une touche de violet.</p>
       </div>
     </section>
 
+    <section class="section section__priseContact">
+      <div class="title__pC">
+        <h3 class="eight reveal reveal">Mockup</h3>
+      </div>
+      <div class="section mockup">
+        <div class="img__pC">
+          <img src="assets/images/mockup_janus/mockup_janus_01.webp" alt="">
+        </div>
+          <div class="img__pC">
+            <img src="assets/images/mockup_janus/mockup_janus_02.webp" alt="">
+          </div>
+      </div>
+      </div>
+      <div class="petit_img__pC">
+        <div><img src="assets/images/mockup_janus/mockup_janus_03.webp" alt=""></div>
+        <div><img src="assets/images/mockup_janus/mockup_janus_04.webp" alt=""></div>
+        <div><img src="assets/images/mockup_janus/mockup_janus_05.webp" alt=""></div>
+      </div>
+    </section>
   </main>
 
   <footer class="section__footer">
